--- a/IzvorniKod/frontend/src/App.css
+++ b/IzvorniKod/frontend/src/App.css
@@ -1,35 +1,114 @@
-* {
-    background-color: beige;
+body {
     font-family:'Courier New', Courier, monospace;
-}
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .container {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 400px;
+    text-align: center;
+  }
+  
+  h2 {
+    color: #333333;
+    margin-bottom: 35px;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  label {
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  
+  input {
+    padding: 5px;
+    margin-bottom: 10px; 
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+  }
 
+  input:not([name="status"]) {
+    width: calc(100% - 20px);
+  }
+  
+  button {
+    background-color: #5d8bb9;
+    color: #ffffff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 5px;
+    font-family:'Courier New', Courier, monospace;
+  }
+  
+  button:hover {
+    background-color: #4b78a4;
+  }
+  
+  p {
+    margin-top: 15px;
+    color: #333333;
+  }
+  
+  a {
+    color: #5d8bb9;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
   fieldset {
     width: 250px; 
-    height: 100px; 
     border: 1px solid black; 
     margin-bottom: 20px;
-    margin-left: 20px; 
-    padding-top: 10px;
+    margin-left: 10px; 
+    padding: 10px; 
 }
   
   legend {
     font-size: large;
     font-weight: bold;
-}
-
-label {
-    font-weight: bold;
-    margin-left: 10px;
+    margin-left: -30px;
 }
 
 #submitBtn {
-    margin-left: 20px;
-    width: 100px; 
-    height: 30px;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 10px;
+    background-color: #5d8bb9;
+    color: #ffffff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 5px;
+    font-family:'Courier New', Courier, monospace;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
 }
+
+#submitBtn:hover {
+    background-color: #4b78a4;
+  }
   
 .poruka {
     font-weight: bold;
