--- a/IzvorniKod/frontend/src/App.css
+++ b/IzvorniKod/frontend/src/App.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -33,6 +33,21 @@ body {
     margin-bottom: 10px;
     font-weight: bold;
   }
+
+  .roles1 {
+    font-weight: normal;
+    margin-left: -140px; 
+  }
+
+  .roles2 {
+    font-weight: normal;
+    margin-left: -100px;
+  }
+
+  .roles3 {
+    font-weight: normal;
+    margin-left: -88px;
+  }
   
   input {
     padding: 5px;
@@ -54,7 +69,7 @@ body {
     cursor: pointer;
     font-size: 16px;
     margin-top: 5px;
-    font-family:'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   button:hover {
@@ -98,7 +113,7 @@ body {
     cursor: pointer;
     font-size: 16px;
     margin-top: 5px;
-    font-family:'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
