--- a/IzvorniKod/frontend/src/App.css
+++ b/IzvorniKod/frontend/src/App.css
@@ -16,6 +16,8 @@ body {
     padding: 20px;
     width: 400px;
     text-align: center;
+    max-height: 700px;
+    overflow-y: auto;
   }
   
   h2 {
