--- a/IzvorniKod/frontend/src/App.css
+++ b/IzvorniKod/frontend/src/App.css
@@ -1,12 +1,17 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f5f5f5;
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    background-image: url("../public/slike/horizontal-banner-silhouette-deer-doe-260nw-2012211323.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
   }
   
   .container {
@@ -63,7 +68,7 @@ body {
   }
   
   button {
-    background-color: #5d8bb9;
+    background-color: #024D44;
     color: #ffffff;
     padding: 10px;
     border: none;
@@ -75,7 +80,7 @@ body {
   }
   
   button:hover {
-    background-color: #4b78a4;
+    background-color: #012B27;
   }
   
   p {
@@ -84,7 +89,7 @@ body {
   }
   
   a {
-    color: #5d8bb9;
+    color: #024D44;
     text-decoration: none;
   }
   
@@ -107,7 +112,6 @@ body {
 }
 
 #submitBtn {
-    background-color: #5d8bb9;
     color: #ffffff;
     padding: 14px 24px;
     border: none;
@@ -122,10 +126,6 @@ body {
     height: 100%;
     text-align: center;
 }
-
-#submitBtn:hover {
-    background-color: #4b78a4;
-  }
   
 .poruka {
     font-weight: bold;
